Try to fix issues on safari AGAIN

--- a/src/components/FAB.module.scss
+++ b/src/components/FAB.module.scss
@@ -8,6 +8,7 @@
 	border: none;
 	outline: none !important;
 	position: relative;
+	padding: 0;
 
 	&::before {
 		content: '';
