--- a/src/components/Ripple.module.scss
+++ b/src/components/Ripple.module.scss
@@ -15,3 +15,6 @@
 	transform: translate(-50%, -50%);
 	z-index: 999;
 }
+*[ripple] {
+	isolation: isolate;
+}
