--- a/src/components/SegmentedButtons.module.scss
+++ b/src/components/SegmentedButtons.module.scss
@@ -22,6 +22,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		margin: 0;
 		&:first-child {
 			border-radius: 1000px 0 0 1000px;
 		}
